# py-player1dev

./: .gitignore  ATTRIBUTIONS.md  README.md  pyproject.toml  requirements-client.txt  requirements-dev.txt  requirements-server.txt  server.py  setup.py
example/: .gitignore  ATTRIBUTIONS.md  LICENSE  README.md  client.py  pyproject.toml  schemas.py  server.py
example/assets/: prerender-default.css
example/assets/.well-known/: security.txt
example/templates/: prerender-default.html
example/views/: example.py
player1dev/: client.py  server.py
player1dev/content/: error500.md  home.md
