[build-system]
requires      = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "example"
version = "1.0.0"
description = "Example."
readme = "README.md"
authors = [{ name = "Example", email = "support@example.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
keywords = ["framework", "desktop", "web", "api", "fastapi", "flutter", "flet"]
dependencies = ["fastapi", "flet", "jinja2", "lxml", "markdown", "passlib", "pymongo", "python-dotenv", "python-jwt", "uvicorn", "wheel"]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["black", "ipdb", "ipython", "isort", "pylint", "twine"]

[project.urls]
Author = "https://example.com/?pypi=example"
Homepage = "https://github.com/Example/app"
